<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    tools:context=".fragment.MyChangePasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/underline_data"
        android:paddingBottom="10dp">

        <RelativeLayout
            android:id="@+id/btn_change_password_back"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="13dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:src="@drawable/left_arrow" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:textColor="#4D4D4D"
            android:textSize="23sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/underline_data"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/origin_password"
            android:textColor="#515151"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/et_origin_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColor="#515151"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/underline_data"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/new_password"
            android:textColor="#515151"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/et_new_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColor="#515151"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/underline_data"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/confirm_password"
            android:textColor="#515151"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/confirm_password_hint"
            android:inputType="textPassword"
            android:textColor="#515151"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="15sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btn_change_password_confirm"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="60dp"
            android:background="@drawable/btn_circular_border"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </RelativeLayout>
</LinearLayout>